small bit of work on pluginloader